# rust-cook-book

./: Cargo.toml  README.md  cats.db  file.txt
src/: main.rs
