[package]
name = "rust-cook-book"
version = "0.1.0"
authors = ["Mehrad Kavian <mehrad.kavian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
ansi_term = "0.12.1"
flate2 = "1.0.13"
tar = "0.4.26"
error-chain = "0.12.1"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.0"
lazy_static = "1.4.0"
walkdir = "2.3.1"
ring = "0.16.10"
num_cpus = "1.12.0"
threadpool = "1.7.1"
num = "0.2.1"
image = "0.22.4"
rayon = "1.3.0"
glob = "0.3.0"
